Add maison photo.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="container">
             <section class="body">
-                <div class="alert alert-info" role="alert">Côté Créatif est ouvert ! On vous accueille à partir de 12h et jusqu'à 19h avec de quoi manger, boire un thé. N'hésitez pas à venir nous rencontrer et poser des questions.</div>
+                <div class="alert alert-info" role="alert"><strong>Côté Créatif est ouvert ! On vous accueille à partir de 12h et jusqu'à 19h avec de quoi manger, boire un thé. N'hésitez pas à venir nous rencontrer et poser des questions.</strong></div>
                 <p class="lead">Le Côté Créatif, c’est tout ce que vous imaginez</p>
                 <p>Côté Créatif est une association à but non lucratif.</p>
                 <p>C’est un espace ouvert à toutes et à tous où on peut venir boire un café, un thé manger un gâteau, déjeuner tout en développant son côté créatif et en laissant libre cours à son imagination. Pour venir, vous aurez juste à adhérer à l’association.</p>
@@ -162,6 +162,7 @@
                         Lundi - vendredi de 12h à 19h
                     </div>
                 </div>
+                <img src="img/maison.jpg" class="img-responsive" style="padding-top: 20px;">
             </section>
             <hr>
             <section class="footer">
