--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="container">
             <section class="body">
-                <div class="alert alert-info" role="alert"><strong>Côté Créatif est ouvert ! On vous accueille à partir de 12h et jusqu'à 19h avec de quoi manger, boire un thé. N'hésitez pas à venir nous rencontrer et poser des questions.</strong></div>
+                <div class="alert alert-info" role="alert"><strong>Côté Créatif est ouvert ! N'hésitez pas à venir nous rencontrer et poser des questions.</strong></div>
                 <p class="lead">Le Côté Créatif, c’est tout ce que vous imaginez</p>
                 <p>Côté Créatif est une association à but non lucratif.</p>
                 <p>C’est un espace ouvert à toutes et à tous où on peut venir boire un café, un thé manger un gâteau, déjeuner tout en développant son côté créatif et en laissant libre cours à son imagination. Pour venir, vous aurez juste à adhérer à l’association.</p>
@@ -159,7 +159,13 @@
 
                     <div class="col-md-4">
                         <h5>Horaires</h5>
-                        Lundi - vendredi de 12h à 19h
+                        Lundi: 12h - 19h</br>
+                        Mardi: 14h - 19h</br>
+                        Mercredi: 12h - 19h</br>
+                        Jeudi: 12h - 19h</br>
+                        Vendredi: 12h - 19h</br>
+                        Samedi: 12h - 19h</br>
+                        Dimanche: Fermé
                     </div>
                 </div>
                 <img src="img/maison.jpg" class="img-responsive" style="padding-top: 20px;">
