--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                     <div class="col-md-4">
                         <h5>Horaires</h5>
-                        Lundi: 12h - 19h</br>
+                        Lundi: Fermé</br>
                         Mardi: 14h - 19h</br>
                         Mercredi: 12h - 19h</br>
                         Jeudi: 12h - 19h</br>
