--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="atelier">
+                            <h5 class="atelier-header">ATELIER PONCTUEL - Couronnes de Noël</h5>
+                            <h5 class="atelier-leader">/avec Muriel</h5>
+                            <p class="atelier-description">Création de couronnes de Noël à partir de branches et matériaux naturels à apporter (nous contacter pour plus d’infos).</p>
+                            <p class="atelier-time">Samedi 10 décembre 2016 de 15h00 à 17h00</p>
+                            <p class="atelier-cost">Participation 9 euros</p>
+                        </div>
+                        <div class="atelier">
                             <h5 class="atelier-header">DESSIN</h5>
                             <h5 class="atelier-leader">/avec Sonia MARTINS</h5>
                             <p class="atelier-description">En s'appuyant sur des contenus théoriques de techniques de dessins d'artistes allant de la renaissance jusqu’à nos jours, l'atelier permettra de vous initier au dessin.</p>
@@ -69,21 +76,21 @@
 
                         <div class="atelier">
                             <h5 class="atelier-header">PEINTURE</h5>
-                            <h5 class="atelier-leader">/avec Marianne</h5>
+                            <h5 class="atelier-leader">/avec Marianne DUPAIN</h5>
                             <p class="atelier-description">Peinture acrylique, figurative mais pas toujours réaliste…</p>
                             <p class="atelier-time">Le mercredi de 18h00 à 19h30</p>
                             <p class="atelier-cost">170 euros + la carte d’adhésion</p>
                         </div>
-
-                        <div class="atelier">
-                            <h5 class="atelier-header">PEINTURE</h5>
-                            <h5 class="atelier-leader">/avec Annick GUERIN</h5>
-                            <p class="atelier-time">Le jeudi de 15h00 à 17h30 et de 17h30 à 19h00</p>
-                            <p class="atelier-cost">Nous contacter pour plus d’informations</p>
-                        </div>
                     </div>
 
                     <div class="col-md-6">
+                        <div class="atelier">
+                            <h5 class="atelier-header">PEINTURE ET DESSIN</h5>
+                            <h5 class="atelier-leader">/avec Annick GUERIN</h5>
+                            <p class="atelier-description">En chacun de nous, il y a une richesse, une sensibilité artistique et cet atelier vous aidera à le découvrir.</p>
+                            <p class="atelier-description">Observer les formes d’objets que je vous présenterai : dessiner ou peindre avec ses couleurs préférées, s’amuser à interpréter les œuvres de peintres célèbres à sa façon avec sa propre personnalité picturale.</p>
+                            <p class="atelier-time">Le jeudi de 15h00 à 17h30 et de 17h30 à 19h00</p>
+                        </div>
                         <div class="atelier">
                             <h5 class="atelier-header">ARTS PLASTIQUES ET NATURE</h5>
                             <h5 class="atelier-leader">/avec Muriel LEFRESNE</h5>
