Add ateliers ponctuels.

--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
 
             <section class="body">
                 <h2 class="page-header">Ateliers</h2>
+                <h3>Ateliers Ponctuels</h3>
+                <div class="atelier">
+                    <h5 class="atelier-header">Couronnes de Noël</h5>
+                    <h5 class="atelier-leader">/avec Muriel</h5>
+                    <p class="atelier-description">Création de couronnes de Noël à partir de branches et matériaux naturels :</p>
+                    <p class="atelier-description">Venez fabriquer votre couronne de Noël à partir de branchages, de brindilles, de pommes de pins, de coquilles de noix, de baies ou fruits séchés... pour le plaisir d'assembler ces matériaux, de partager un joyeux moment et de suspendre votre couronne pour les fêtes. Prévoyez d'amener avec vous des matériaux glanés au cours de vos promenades, tout ce qui vous inspire dans la mesure où ce n'est pas toxique.</p>
+                    <p class="atelier-time">Samedi 10 décembre 2016 de 15h00 à 17h00</p>
+                    <p class="atelier-cost">Participation 9 euros</p>
+                </div>
+                <h3>Ateliers Encadrés</h3>
+                <p>Les ateliers encadrés se déroulent sur une année. Un tarif dégressif sera appliqué en fonction de la date d’adhésion qui peut se faire toute l’année.</p>
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="atelier">
-                            <h5 class="atelier-header">ATELIER PONCTUEL - Couronnes de Noël</h5>
-                            <h5 class="atelier-leader">/avec Muriel</h5>
-                            <p class="atelier-description">Création de couronnes de Noël à partir de branches et matériaux naturels à apporter (nous contacter pour plus d’infos).</p>
-                            <p class="atelier-time">Samedi 10 décembre 2016 de 15h00 à 17h00</p>
-                            <p class="atelier-cost">Participation 9 euros</p>
-                        </div>
                         <div class="atelier">
                             <h5 class="atelier-header">DESSIN</h5>
                             <h5 class="atelier-leader">/avec Sonia MARTINS</h5>
@@ -81,9 +85,6 @@
                             <p class="atelier-time">Le mercredi de 18h00 à 19h30</p>
                             <p class="atelier-cost">170 euros + la carte d’adhésion</p>
                         </div>
-                    </div>
-
-                    <div class="col-md-6">
                         <div class="atelier">
                             <h5 class="atelier-header">PEINTURE ET DESSIN</h5>
                             <h5 class="atelier-leader">/avec Annick GUERIN</h5>
@@ -91,6 +92,9 @@
                             <p class="atelier-description">Observer les formes d’objets que je vous présenterai : dessiner ou peindre avec ses couleurs préférées, s’amuser à interpréter les œuvres de peintres célèbres à sa façon avec sa propre personnalité picturale.</p>
                             <p class="atelier-time">Le jeudi de 15h00 à 17h30 et de 17h30 à 19h00</p>
                         </div>
+                    </div>
+
+                    <div class="col-md-6">
                         <div class="atelier">
                             <h5 class="atelier-header">ARTS PLASTIQUES ET NATURE</h5>
                             <h5 class="atelier-leader">/avec Muriel LEFRESNE</h5>
