--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
                     <p class="atelier-time">Samedi 10 décembre 2016 de 15h00 à 17h00</p>
                     <p class="atelier-cost">Participation 9 euros</p>
                 </div>
+                <div class="atelier">
+                    <h5 class="atelier-header">Cache-Pot Récup</h5>
+                    <h5 class="atelier-leader">/avec Clément</h5>
+                    <p class="atelier-description">Fabriquer un cache-pot original avec du matériel de récupération et peut être offrir ce cadeau personnalisé à Noël.</p>
+                    <p class="atelier-time">Mardi 13 décembre 2016 de 15h à 17h, samedi 17 décembre de 15h à 17h et mardi 20 décembre de 14h à 16h.</p>
+                    <p class="atelier-cost">Participation 9 euros</p>
+                </div>
                 <h3>Ateliers Encadrés</h3>
                 <p>Les ateliers encadrés se déroulent sur une année. Un tarif dégressif sera appliqué en fonction de la date d’adhésion qui peut se faire toute l’année.</p>
                 <div class="row">
