Adding more ateliers.

--- a/index.html
+++ b/index.html
@@ -32,20 +32,33 @@
             <section class="body">
                 <h2 class="page-header">Ateliers</h2>
                 <h3>Ateliers Ponctuels</h3>
-                <div class="atelier">
-                    <h5 class="atelier-header">Couronnes de Noël</h5>
-                    <h5 class="atelier-leader">/avec Muriel</h5>
-                    <p class="atelier-description">Création de couronnes de Noël à partir de branches et matériaux naturels :</p>
-                    <p class="atelier-description">Venez fabriquer votre couronne de Noël à partir de branchages, de brindilles, de pommes de pins, de coquilles de noix, de baies ou fruits séchés... pour le plaisir d'assembler ces matériaux, de partager un joyeux moment et de suspendre votre couronne pour les fêtes. Prévoyez d'amener avec vous des matériaux glanés au cours de vos promenades, tout ce qui vous inspire dans la mesure où ce n'est pas toxique.</p>
-                    <p class="atelier-time">Samedi 10 décembre 2016 de 15h00 à 17h00</p>
-                    <p class="atelier-cost">Participation 9 euros</p>
-                </div>
-                <div class="atelier">
-                    <h5 class="atelier-header">Cache-Pot Récup</h5>
-                    <h5 class="atelier-leader">/avec Clément</h5>
-                    <p class="atelier-description">Fabriquer un cache-pot original avec du matériel de récupération et peut être offrir ce cadeau personnalisé à Noël.</p>
-                    <p class="atelier-time">Mardi 13 décembre 2016 de 15h à 17h, samedi 17 décembre de 15h à 17h et mardi 20 décembre de 14h à 16h.</p>
-                    <p class="atelier-cost">Participation 9 euros</p>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="atelier">
+                            <h5 class="atelier-header">Couronnes de Noël</h5>
+                            <h5 class="atelier-leader">/avec Muriel</h5>
+                            <p class="atelier-description">Création de couronnes de Noël à partir de branches et matériaux naturels :</p>
+                            <p class="atelier-description">Venez fabriquer votre couronne de Noël à partir de branchages, de brindilles, de pommes de pins, de coquilles de noix, de baies ou fruits séchés... pour le plaisir d'assembler ces matériaux, de partager un joyeux moment et de suspendre votre couronne pour les fêtes. Prévoyez d'amener avec vous des matériaux glanés au cours de vos promenades, tout ce qui vous inspire dans la mesure où ce n'est pas toxique.</p>
+                            <p class="atelier-time">Samedi 10 décembre 2016 de 15h00 à 17h00</p>
+                            <p class="atelier-cost">Participation 9 euros</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="atelier">
+                            <h5 class="atelier-header">Cache-Pot Récup</h5>
+                            <h5 class="atelier-leader">/avec Clément</h5>
+                            <p class="atelier-description">Fabriquer un cache-pot original avec du matériel de récupération et peut être offrir ce cadeau personnalisé à Noël.</p>
+                            <p class="atelier-time">Mardi 13 décembre 2016 de 15h à 17h, samedi 17 décembre de 15h à 17h et mardi 20 décembre de 14h à 16h.</p>
+                            <p class="atelier-cost">Participation 9 euros</p>
+                        </div>
+                        <div class="atelier">
+                            <h5 class="atelier-header">Sac à Tarte</h5>
+                            <h5 class="atelier-leader">/avec Emilie</h5>
+                            <p class="atelier-description">Venez fabriquer un sac pratique et personnalisé pour transporter vos plats à tarte à l’occasion des fêtes de fin d’année ou pour offrir à Noël.</p>
+                            <p class="atelier-time">Vendredi 16 décembre 2016 de 14h à 16h et lundi 19 décembre 2016 de 14h à 16h</p>
+                            <p class="atelier-cost">Participation 9 euros</p>
+                        </div>
+                    </div>
                 </div>
                 <h3>Ateliers Encadrés</h3>
                 <p>Les ateliers encadrés se déroulent sur une année. Un tarif dégressif sera appliqué en fonction de la date d’adhésion qui peut se faire toute l’année.</p>
