change the hours

--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
                     <div class="col-md-4">
                         <h5>Horaires</h5>
                         Lundi: Fermé</br>
-                        Mardi: 14h - 19h</br>
-                        Mercredi: 12h - 19h</br>
-                        Jeudi: 12h - 19h</br>
-                        Vendredi: 12h - 19h</br>
-                        Samedi: 12h - 19h</br>
+                        Mardi: 14h - 18h30</br>
+                        Mercredi: 12h - 18h30</br>
+                        Jeudi: 12h - 18h30</br>
+                        Vendredi: 12h - 18h30</br>
+                        Samedi: 12h - 18h30</br>
                         Dimanche: Fermé
                     </div>
                 </div>
