changement des dates de fermeture

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="container">
             <section class="body">
-                <div class="alert alert-info" role="alert"><strong>Côté Créatif sera fermé du 31 janvier au 7 février inclus pour des travaux d'amélioration. Rendez-vous le 8 février pour la réouverture !</strong></div>
+                <div class="alert alert-info" role="alert"><strong>Côté Créatif sera fermé du 31 janvier au 12 février inclus pour des travaux d'amélioration. Rendez-vous le lundi 13 février pour la réouverture !</strong></div>
                 <p class="lead">Le Côté Créatif, c’est tout ce que vous imaginez</p>
                 <p>Côté Créatif est une association à but non lucratif.</p>
                 <p>C’est un espace ouvert à toutes et à tous où on peut venir boire un café, un thé manger un gâteau, déjeuner tout en développant son côté créatif et en laissant libre cours à son imagination. Pour venir, vous aurez juste à adhérer à l’association.</p>
