--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="col-md-4">
                         <h5>Horaires</h5>
                         Lundi: Fermé</br>
-                        Mardi: 14h - 18h30</br>
+                        Mardi: Fermé</br>
                         Mercredi: 12h - 18h30</br>
                         Jeudi: 12h - 18h30</br>
                         Vendredi: 12h - 18h30</br>
