--- a/index.html
+++ b/index.html
@@ -31,50 +31,27 @@
             <section class="body">
                 <h2 class="page-header">Ateliers</h2>
                 <h3>Ateliers Encadrés</h3>
-                <p>Les ateliers encadrés se déroulent sur une année. Un tarif dégressif sera appliqué en fonction de la date d’adhésion qui peut se faire toute l’année.</p>
+                <p>Les ateliers encadrés se déroulent sur une année. Un tarif dégressif sera appliqué en fonction de la date d’inscription qui peut se faire toute l’année.</p>
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="atelier">
-                            <h5 class="atelier-header">DESSIN</h5>
-                            <h5 class="atelier-leader">/avec Sonia MARTINS</h5>
-                            <p class="atelier-description">En s'appuyant sur des contenus théoriques de techniques de dessins d'artistes allant de la renaissance jusqu’à nos jours, l'atelier permettra de vous initier au dessin.</p>
-                            <p class="atelier-time">Le lundi de 17h à 18h30 tous les 15 jours</p>
-                            <p class="atelier-cost">140 euros + la carte d’adhésion</p>
-                        </div>
-
-                        <div class="atelier">
-                            <h5 class="atelier-header">CONNAISSANCE DE LA COULEUR</h5>
-                            <h5 class="atelier-leader">/avec Elisabeth FLEXER</h5>
-                            <p class="atelier-description">Un outil pour la création personnelle</p>
-                            <p class="atelier-description">Maîtriser les couleurs et leurs mélanges, les contrastes, les harmonies et fabriquer ses couleurs personnelles en vue de peinture, illustration, textile, décoration, bijoux, etc.</p>
-                            <p class="atelier-description">Expérimentation pratique de ces notions avec gouache, acrylique, papiers découpés dans des revues.</p>
-                            <p class="atelier-time">Le mardi de 15h à 17h00 ou de 17h00 à 19h00 tous les 15 jours</p>
-                            <p class="atelier-cost">150 euros + la carte d’adhésion</p>
-                        </div>
-
-                        <div class="atelier">
-                            <h5 class="atelier-header">DECO</h5>
-                            <h5 class="atelier-leader">/avec Clément LE STER</h5>
-                            <p class="atelier-description">Création de décoration et d’aménagements à partir de matériaux de récupération et du détournement d’objets</p>
-                            <p class="atelier-time">Le mercredi de 17h00 à 19h00, le jeudi de 9h30 à 11h30 ou de 17h00 à 19h00</p>
-                            <p class="atelier-cost">190 euros + la carte d’adhésion</p>
-                        </div>
-
+                      
                         <div class="atelier">
                             <h5 class="atelier-header">DECOUVERTE</h5>
                             <h5 class="atelier-leader">/avec Martine ROUSSEL</h5>
                             <p class="atelier-description">Découvrir un large éventail de possibilités créatives : pochoirs, tampons, peinture, crayon, aquarelle, encre, vernis, matières, collages, pliages, etc…, pour le plaisir de la nouveauté.</p>
                             <p class="atelier-time">Le mercredi de 15h00 à 16h30 ou de 16h30 à 18h00</p>
-                            <p class="atelier-cost">170 euros + la carte d’adhésion</p>
+                            <p class="atelier-cost">7,50 à l’atelier + la carte d’adhésion (ou 170 euros pour l’année)</p>
                         </div>
 
+                        
                         <div class="atelier">
-                            <h5 class="atelier-header">PEINTURE ET DESSIN</h5>
-                            <h5 class="atelier-leader">/avec Annick GUERIN</h5>
-                            <p class="atelier-description">En chacun de nous, il y a une richesse, une sensibilité artistique et cet atelier vous aidera à le découvrir.</p>
-                            <p class="atelier-description">Observer les formes d’objets que je vous présenterai : dessiner ou peindre avec ses couleurs préférées, s’amuser à interpréter les œuvres de peintres célèbres à sa façon avec sa propre personnalité picturale.</p>
-                            <p class="atelier-time">Le jeudi de 15h00 à 17h30 et de 17h30 à 19h00</p>
+                            <h5 class="atelier-header">DESSIN</h5>
+                            <h5 class="atelier-leader">/avec Sonia MARTINS</h5>
+                            <p class="atelier-description">En s'appuyant sur des contenus théoriques de techniques de dessins d'artistes allant de la renaissance jusqu’à nos jours, l'atelier permettra de vous initier au dessin.</p>
+                            <p class="atelier-time">Le vendredi de 17h à 18h30 </p>
+                            <p class="atelier-cost">7,50 à l’atelier + la carte d’adhésion (ou 170 euros pour l’année)</p>
                         </div>
+
                     </div>
 
                     <div class="col-md-6">
@@ -97,8 +74,8 @@
                             <h5 class="atelier-leader">/avec Maxime LE STER</h5>
                             <p class="atelier-description">Venez (re)découvrir votre plume, en groupe, au gré des thématiques proposées. L'atelier d'écriture est un voyage au cœur de votre imaginaire, alimenté par celui des autres dans une émulation collective.</p>
                             <p class="atelier-description">Une occasion de donner vie à vos textes, si possible à l'oral, que vous vous sentiez l'âme d'un poète, d'un romancier, d'un nouvelliste, d'un parolier, ou tout cela à la fois. Pour qu'écrire reste ou devienne un plaisir.</p>
-                            <p class="atelier-time">Le samedi de 14h30 à 16h00 ou de 17h00 à 18h30</p>
-                            <p class="atelier-cost">190 euros + la carte d’adhésion</p>
+                            <p class="atelier-time">Le samedi de 15h00 à 16h30 tous les 15 jours </p>
+                            <p class="atelier-cost">7,50 à l’atelier + la carte d’adhésion (ou 170 euros pour l’année)</p>
                         </div>
                     </div>
                 </div>
